# BloodCellClassification

./: .dockerignore  .gitignore  DOCKER_DATASET_SETUP.md  Dockerfile  LICENSE  README.md  TODO.md  conf.yaml  docker-compose.yml  main.py  pyproject.toml  start.sh  stop.sh  test_gradcam_issue.py
Streamlit/: app.py
Streamlit/pages/: 3_Modele.py  5_Ameliorations_potentielles.py  6_Conclusion.py
app/: __init__.py
app/backend/: __init__.py
app/backend/services/: display_img.py
app/frontend/: app.py
app_display_data/frontend/: __init__.py
docs/: PYTORCH_FIX.md  confusion_matrix_implementation.md  dataset_exploration_features.md  gradcam_fix.md  src_documentation.md
models/checkpoints/: metrics.json
notebooks/: mask_cells_v2.ipynb  viz_stats_dataset.ipynb
scripts/: load_dataset.sh
src/: app.py  conf.yaml  train_model.py
src/models/: base_classifier.py  cnn_classifier.py  model_factory.py  resnet_classifier.py
src/notebooks/: mask_cells.ipynb
src/pages/: 1_Presentation_du_projet.py  2_Exploration_du_dataset.py  3_Modele.py  4_Demo.py  5_Ameliorations_potentielles.py  6_Conclusion.py
src/pipe/: __init__.py  evaluate_model.py  train_model.py
src/services/: data_transform_service.py  dataset_service.py  evaluation_service.py  inference_service.py  keras_inference_service.py  training_service.py  yaml_loader.py
src/utils/: chart_generator.py  dataset_analyzer.py  gradcam_analyzer.py  image_loader.py  image_similarity.py  rgb_analyzer.py  rgb_chart_generator.py  spectral_visualization.py  statistics_calculator.py  streamlit_renderers.py
tests/: __init__.py  test_data_transform_service.py  test_device.py  test_evaluation_service.py  test_inference_service.py  test_model_factory.py  test_resnet_classifier.py  test_scripts.py  test_training_pipeline.py
(+6 files in other folders)
